# tchat

./: .gitignore  Cargo.toml  LICENSE  build.rs  deny.toml
.github/workflows/: ci.yml  release.yml  security.yml
examples/: agent_harness.rs
proto/: googlechat.proto
src/: error.rs  lib.rs  main.rs  setup.rs  terminal.rs
src/agent/: cli.rs  client.rs  events.rs  json.rs  mod.rs  server.rs
src/config/: keyring.rs  mod.rs
src/event/: inbound.rs  mod.rs  outbound.rs
src/platform/: mod.rs
src/platform/googlechat/: api.rs  auth.rs  channel.rs  chunk.rs  convert.rs  cookies.rs  direct.rs  mod.rs  pblite.rs  search.rs  session.rs
src/store/: mod.rs
src/tui/: layout.rs  mod.rs  theme.rs
src/tui/widgets/: input_box.rs  message_list.rs  mod.rs  space_list.rs  status_bar.rs  status_panel.rs
src/types/: ids.rs  message.rs  mod.rs  space.rs  timestamp.rs
tests/: agent_http_test.rs  live_api_test.rs  live_capture_search.rs  live_command_bot.rs  live_cookie_debug.rs  live_direct_mode.rs  live_event_capture.rs  live_phase1_test.rs  live_phase2_all_endpoints.rs  live_phase3_everything.rs  live_phase4_stream_events.rs  live_phase5_full_stack.rs  live_probe_space.rs  live_reaction_binary.rs  live_reaction_debug.rs  live_schema_discovery.rs  live_search_test.rs  live_send_channel.rs  live_send_debug.rs  live_streamevents.rs  live_test_space_check.rs  live_tui_simulation.rs  pblite_integration.rs  tui_render.rs
