[package]
name = "tchat"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Terminal multi-platform chat client (Google Chat first) with a programmatic agent interface"
repository = "https://github.com/lituus-io/tchat"
authors = ["terekete"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
crossbeam = "0.8"
ureq = "3"
prost = "0.13"
bytes = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
headless_chrome = "1"
# Cookie extraction from Chrome's database
rusqlite = { version = "0.32", features = ["bundled"] }
# Cookie decryption (macOS Keychain AES)
aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha1 = "0.10"
# Agent-facing HTTP daemon (tchat serve) — sync, single-threaded
tiny_http = "0.12"
parking_lot = "0.12"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
proptest = "1"
